--- a/cliente/package.json
+++ b/cliente/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.2.3",
     "bootstrap": "^5.3.0-alpha1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
